# Nex

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  limit-nex.sh  nex  nex_project_structure.txt  package-lock.json
.opencode/skills/: code-review.md  custom-agent.md
backend/: main.py  pyproject.toml  requirements.txt
backend/agent/: agent.py  executor.py  memory.py  observation.py  planner.py  state.py
backend/api/: routes.py  schemas.py
backend/config/: loader.py
backend/context/: cache.py  embeddings.py  indexer.py  parser.py  search.py  workspace.py
backend/exceptions/: exceptions.py  handlers.py
backend/llm/: anthropic_provider.py  deepseek_provider.py  gemini.py  key_manager.py  manager.py  models.py  ollama_provider.py  openai_provider.py  provider.py
backend/prompts/: planner.txt  system.txt  tools.txt
backend/services/: chat.py  config.py  workspace.py
backend/storage/: cache.py  history.py  memory.py  settings.py
backend/tools/: code_analysis.py  errors.py  filesystem.py  git.py  image_tool.py  lsp.py  mcp.py  refactoring.py  registry.py  sessions.py  skills.py  terminal.py  tool.py  web.py
backend/utils/: helpers.py  logger.py  paths.py  tracer.py
backend/web/: index.html
docs/: api.md  architecture.md  roadmap.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite  vite.config.ts
frontend/src/: index.html  main.ts  preload.ts  renderer.ts  types.ts
frontend/src/components/: ChatBox.ts  (+4 more)
shared/: constants.py
shared/protocol/: events.py  messages.py  tools.py
(+12 files in other folders)
